fix: update center alignment class

--- a/css/sassoftware.css
+++ b/css/sassoftware.css
@@ -697,7 +697,9 @@ td:last-child {
 	text-align: left; 
 }
 .u-align-center {
-	text-align: center; 
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .u-align-right {
 	text-align: right; 
